<resources>
    <string name="app_name">Your Profile</string>
    <string name="nazhier_rijalana">Nazhier Rijalana</string>
    <string name="_07_04_1999">Sidoarjo 07/04/1999</string>
    <string name="stt_bandung">STT Bandung</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="sidoarjo">Sidoarjo</string>
    <string name="_20552012002">20552012002</string>
    <string name="kurumin_gaming">KurumiN Gaming</string>
    <string name="back">Back</string>
</resources>