<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/frame_2"
    android:elevation="4dp"
    tools:context=".Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_1"
        android:layout_width="410sp"
        android:layout_height="518sp"
        app:cardBackgroundColor="#1BD8F1"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_2"
        android:layout_width="368sp"
        android:layout_height="86sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#05F9BE"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255">

        <TextView
            android:id="@+id/text_nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/petrona_font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/nazhier_rijalana"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_3"
        android:layout_width="368sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="8sp"
        app:cardBackgroundColor="#05F9BE"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_2">

        <TextView
            android:id="@+id/text_ttl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/petrona_font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/_07_04_1999"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_5"
        android:layout_width="368sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#05F9BE"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_3">

        <TextView
            android:id="@+id/asal_kampus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/petrona_font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/stt_bandung"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_6"
        android:layout_width="368sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#05F9BE"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_5">

        <TextView
            android:id="@+id/jurusan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/petrona_font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/teknik_informatika"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_7"
        android:layout_width="368sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#05F9BE"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_6">

        <TextView
            android:id="@+id/nrp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/petrona_font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/_20552012002"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle_8"
        android:layout_width="368sp"
        android:layout_height="48sp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#05F9BE"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_7">

        <TextView
            android:id="@+id/yt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/petrona_font"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/kurumin_gaming"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="135dp"
        android:layout_height="137dp"
        android:layout_margin="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="70dp"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@drawable/kurumin" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>